--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,4 +4,23 @@
 
 .logo {
     height: 80px;
+    padding: 10px 0;
+}
+
+.header nav {
+    background-color: #000;
+    line-height: 40px;
+    overflow: hidden;
+}
+
+.header nav a {
+    color: #fff;
+    text-decoration: none;
+    margin-right: 20px;
+    font-size: 20px;
+    padding: 10px;
+}
+
+.header nav a:hover {
+    background-color: lightblue;
 }
