--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,3 +1,16 @@
+.search-container {
+    background-color: rgb(12, 10, 10);
+    line-height: 80px;
+    text-align: center;
+}
+
+.search-container input {
+    width: 75%;
+    height: 25px;
+    font-size: 18px;
+    padding: 5px;
+}
+
 .shop-container {
     display: grid;
     grid-template-columns: 3fr 1fr;
